@@ -1,3 +1,7 @@
+2011-05-12  6.6.9-9 Glenn Randers-Pehrson <glennrp@image...>
+  * Fixed PNG8 reduction to work with an image that reduces to 256 colors
+    plus transparency, by merging the two darkest red colors.
+
 2011-05-04  6.6.9-8 Cristy  <quetzlzacatenango@image...>
   * New version 6.6.9-8.
 
